# taiyo-code

./: CLAUDE.md
.claude/commands/: japan-localize-builder.md
.claude/skills/japan-localize-builder/output/chishiki/: localization-strategy.md  requirements.md  research-notes.md
.claude/skills/japan-localize-builder/output/supplico/: localization-strategy.md  requirements.md  research-notes.md
.claude/skills/japan-localize-builder/output/xboost/: localization-strategy.md  requirements.md  research-notes.md
.claude/skills/japan-localize-builder/references/: built-products.md  claude-code-development.md  japan-localization.md  research-sources.md
taiyo-cli/: README.md  pyproject.toml  requirements.txt  taiyo
taiyo-cli/src/: api.py  app.py  config.py  main.py
taiyo-cli/src/tools/: __init__.py  base.py  bash_tool.py  edit_tool.py  glob_tool.py  grep_tool.py  read_tool.py  web_tool.py  write_tool.py
